--- a/react-app/src/components/CSS/MyStories.css
+++ b/react-app/src/components/CSS/MyStories.css
@@ -3,7 +3,7 @@
     font-size: 24px;
     font-weight: bold;
     word-wrap: break-word;
-    width: fit-content;
+    width: 300px;
 
 }
 
